--- a/ProgramSelect.html
+++ b/ProgramSelect.html
@@ -21,16 +21,17 @@
     <link rel="stylesheet" href="assets/css/owl.css">
  
  
-    <!-- Header -->
-    <header class="">
-      <nav class="navbar navbar-expand-lg">
+    <!--aint no body does this better-->
+    <body>
+      <header class="">
+      <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler dark" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="ProgramSelect.html"><h3>Programs</h3></a>
-            <a class="ADD"><button class="ADD" type="button">ADD</button></a>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+            
+          <div class="collapse navbar-collapse bg-dark" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="Welcome.html">Home
@@ -45,13 +46,12 @@
                 <li class="nav-item"><a class="nav-link" href="Statistics.php">progress</a></li>
             </ul>
           </div>
+          <a class="ADD"><button class="ADD" type="button">ADD</button></a>
         </div>
       </nav>
     </header>
+    </body>
 
-    <?php 
-      echo 'this'
-    ?>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
