updated links on index

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Workouts">
     <meta name="author" content="man of wealth and taste">
-    <link rel="icon" href="assets/images/img.ico">
+    <link rel="icon" href="../assets/images/img.ico">
     
 
     <title>Powerful Workouts | Welcome</title>
@@ -16,9 +16,9 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/owl.css">
  
  
     <!-- Header -->
@@ -28,20 +28,20 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="Welcome.html"><h1>Powerful Workouts</h1></a>
+          <a class="navbar-brand" href="index.html"><h1>Jmo-inc</h1></a>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Welcome.html">Home
+                    <a class="nav-link" href="index.html">Home
                       <span class="sr-only">(current)</span>
                     </a>
                 </li> 
 
                 <li class="nav-item"><a class="nav-link" href="ProgramSelect.html">Programs</a></li>
                 
-                <li class="nav-item"><a class="nav-link" href="Exercises.php">Exercises</a></li>
+                <li class="nav-item"><a class="nav-link" href="Exercises.html">Exercises</a></li>
 
-                <li class="nav-item"><a class="nav-link" href="Statistics.php">progress</a></li>
+                <li class="nav-item"><a class="nav-link" href="Statistics.html">progress</a></li>
             </ul>
           </div>
         </div>
